# light_painting_demo

./: CMakeLists.txt  README.md  package.xml  run_moveit_cpp.yaml
config/: moveit_controllers.yaml  moveit_cpp.yaml
include/: parse_image_waypoints.h
include/light_painting_demo/: parse_image_waypoints.h
launch/: ur_moveit_cpp.launch.py
resources/: moveit.yaml  moveit2.yaml  simple_devel_image.yaml
src/: parse_image_waypoints.cpp  run_demo.cpp  waypoint_parsing_demo.cpp
