<?xml version="1.0"?>
<package format="3">
 <name>light_painting_demo</name>
 <version>0.0.1</version>
 <description>UR5 light paitnting demo </description>
 <maintainer email="zelenak@picknik.ai">AndyZe</maintainer>
 <license>BSD</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>yaml-cpp</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
